# kr-market-data-sandbox

./: LICENSE  README.md  pyproject.toml
docs/: beginner_guide.md  data_sources.md
examples/: binance_public_kline_sample.py  candle_cleaning_demo.py  returns_demo.py
src/kr_data_sandbox/: candles.py  cli.py  csv_utils.py  returns.py
tests/: test_candles.py  test_returns.py
